[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.poetry]
name = "discapty"
version = "2.0.1"
description = "DisCapTy help you generate obfuscated images, leaving your code easy."
authors = ["Predeactor <predeactor0@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Predeactor/DisCapTy"
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",

    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",

    "Topic :: Multimedia :: Graphics",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",

    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
pillow = "^8.4.0"
pydantic = "^1.9.1"

# Extra: Docs
furo = {version = "^2022.6.21", optional = true}
Sphinx = {version = "^4.4.0", optional = true}
sphinx-copybutton = {version = "^0.5.0", optional = true}

[tool.poetry.urls]
homepage = "https://github.com/Predeactor/DisCapTy"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
mypy = "^0.960"
black = "^22.1.0"
isort = "^5.10.1"
tox = "^3.24.5"
tox-gh-actions = "^2.9.1"

[tool.poetry.extras]
docs = ["furo", "Sphinx", "sphinx-copybutton"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
