[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.poe]
poetry_command = ""

[tool.poe.tasks]
_format_black = "black discapty"
_format_isort = "isort discapty"
format = ["_format_black", "_format_isort"]
_coverage_run = "coverage run -m pytest --html=tests/report/index.html . -v"
_coverage_report = "coverage report -m"
_coverage_html = "coverage html"
test = ["_coverage_run", "_coverage_report", "_coverage_html"]
lint = "mypy discapty"

[tool.poetry]
name = "discapty"
version = "2.2.0"
description = "DisCapTy help you generate obfuscated images, leaving your code easy."
authors = ["Predeactor <predeactor0@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Predeactor/DisCapTy"
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",

    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",

    "Topic :: Multimedia :: Graphics",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",

    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^9.4.0"
pydantic = "^2.5.2"
pydantic-extra-types = "^2.2.0"

[tool.poetry.urls]
homepage = "https://github.com/Predeactor/DisCapTy"

[tool.poetry.group.dev.dependencies]
mypy = "^0.960"
black = "^22.1.0"
isort = "^5.10.1"
tox = "^4.11.4"
tox-gh-actions = "^3.1.3"
coverage = "^7.2.2"
pytest = "^7.2.2"
pytest-html = "^3.2.0"
types-pillow = "^9.4.0.19"
poethepoet = "^0.24.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = "^2022.6.21"
Sphinx = "^4.4.0"
sphinx-copybutton = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
