[metadata]
name = DisCapTy
version = attr: discapty.__version__
description = An easy and fully async generator of Captcha, imaginated for Discord bots
license = MIT License
long_description=file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Predeactor
author_email = predeactor0@gmail.com

url = https://github.com/Charlemagne-3/DisCa

project_urls =
    Discord Server = https://discord.gg/rD7TTrUcjw
    Issues Tracker = https://github.com/Charlemagne-3/DisCapTy/issues
    Source Code = https://github.com/Charlemagne-3/DisCapTy

classifiers =
    "Development Status :: 4 - Beta"
    "License :: OSI Approved :: MIT License"
    "Natural Language :: English"
    "Programming Language :: Python :: 3.8"
    "Operating System :: OS Independent"

[options]
python_requires = >=3.5,<3.9
include_package_data = True
install_requires =
    pillow>=8.1.0
    wheezy.captcha>=3.0.0
    discord.py>=1.6.0

[options.extras_require]
test =
    pytest==6.2.2
