[metadata]
name = DisCapTy
version = attr: discapty.__version__
description = An easy and fully async generator of Captcha, imaginated for Discord bots
license = MIT License
long_description=file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Predeactor
author_email = predeactor0@gmail.com

url = https://github.com/Predeactor/DisCapTy

project_urls =
    Discord Server = https://discord.gg/aPVupKAxxP
    Issues Tracker = https://github.com/Predeactor/DisCapTy/issues
    Source Code = https://github.com/Predeactor/DisCapTy

classifiers =
    # List at https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries :: Python Modules


[options]
python_requires = >=3.5,<3.9
include_package_data = True
install_requires =
    pillow>=8.1.0
    wheezy.captcha>=3.0.0
    discord.py>=1.6.0

[options.extras_require]
test =
    pytest==6.2.2
